RESOLVED FIXED136202
ASSERT(extractable()) when storing a non-extractable key in IndexedDB
https://bugs.webkit.org/show_bug.cgi?id=136202
Summary ASSERT(extractable()) when storing a non-extractable key in IndexedDB
Alexey Proskuryakov
Reported 2014-08-24 15:40:08 PDT
There are assertions in a few WebCrypto exportData() function to verify that non-extractable keys are not exported. But the same function is used for structured clone serialization, which is allowed. rdar://problem/17993967
Attachments
proposed fix (8.65 KB, patch)
2014-08-24 16:50 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-08-24 16:50:41 PDT
Created attachment 237050 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-08-24 19:33:19 PDT
Comment on attachment 237050 [details] proposed fix Clearing flags on attachment: 237050 Committed r172898: <http://trac.webkit.org/changeset/172898>
WebKit Commit Bot
Comment 3 2014-08-24 19:33:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.