ASSERT(extractable()) when storing a non-extractable key in IndexedDB https://bugs.webkit.org/show_bug.cgi?id=136202 rdar://problem/17993967

Reviewed by Darin Adler.

Source/WebCore:

Test: crypto/subtle/rsa-indexeddb-non-exportable.html

Removed the obsolete assertion.

* crypto/keys/CryptoKeyAES.cpp: (WebCore::CryptoKeyAES::exportData):
* crypto/keys/CryptoKeyHMAC.cpp: (WebCore::CryptoKeyHMAC::exportData):
* crypto/mac/CryptoKeyRSAMac.cpp: (WebCore::CryptoKeyRSA::exportData):

LayoutTests:

* crypto/subtle/rsa-indexeddb-non-exportable-expected.txt: Added.
* crypto/subtle/rsa-indexeddb-non-exportable.html: Added.


Canonical link: https://commits.webkit.org/154028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172898 268f45cc-cd09-0410-ab3c-d52691b4dbfc