Source/WebCore/crypto/keys/CryptoKeyAES.cpp
@@ -71,7 +71,6 @@ void CryptoKeyAES::buildAlgorithmDescription(CryptoAlgorithmDescriptionBuilder& 
 
 std::unique_ptr<CryptoKeyData> CryptoKeyAES::exportData() const
 {
-    ASSERT(extractable());
     return CryptoKeyDataOctetSequence::create(m_key);
 }
 
